@@ -204,7 +204,7 @@
 
 <addon id="plugin.video.ZemTV-shani"
        name="ZemTV.com"
-       version="3.7.4"
+       version="3.7.5"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
